# LightPropagation

./: CMakeLists.txt  README.md  copy_patterns.cmake
Analysis/: Analysis.cpp  CMakeLists.txt
IO/: CMakeLists.txt  ImportExport.cpp  ImportExport.hpp  ReadXML.hpp
ImageFilter/: ImageFilter.hpp
Interface/: CMakeLists.txt
Model/: CMakeLists.txt  VoxToMesh.cpp  createModel.cpp  layermodel.xml
PSNR/: CMakeLists.txt
Simulation/: CalculatePropagation.cpp  CalculatePropagation.hpp
Unsorted/: ran3.c
config/: FindOpenCL.cmake
main/: CMakeLists.txt
models/model1/: config.xml
models/model2/: config.xml  model.blend  model.blend1  model.blend2
models/model3/: config.xml  model.blend
models/model4/: config.xml  configPlanar.xml  model4.blend  model4Planar.blend
models/model5/: configA.xml  configB.xml
models/model6/: config1.xml  config137.xml  configFA.xml  configFB.xml  configRdA.xml  configRdB.xml  configRdC.xml
src/: CMakeOptions.cmake
src/Analysis/: Analysis.hpp
src/IO/: Logs.cpp  Logs.hpp  ReadXML.cpp
src/ImageFilter/: CMakeLists.txt  ImageFilter.cpp
src/Interface/: CLI.cpp  CLI.hpp
src/Model/: Emitter.cpp  Emitter.hpp  VoxToMesh.hpp  createModel.hpp  layermodel2.xml
src/PSNR/: PSNR.cpp  PSNR.hpp
src/Simulation/: CMakeLists.txt  MCLightPropagation.cl  vecAdd.cl
src/config/: FindBoost.cmake
src/main/: main.cpp
